--- a/HealthClub/templates/physio-slim/br_offer.html
+++ b/HealthClub/templates/physio-slim/br_offer.html
@@ -17,7 +17,7 @@
       <div class="card m-1 mt-5" style="height: 50vh;">
 
         <div class="bg-image hover-overlay ripple p-1" data-mdb-ripple-color="light">
-            <img src="{{MEDIA_URL}}/{{clinic.photo}}" class="img-fluid" style="width:  100%;
+            <img src="{{MEDIA_URL}}/{{offer.photo}}" class="img-fluid" style="width:  100%;
                           height: 200px;
                           background-size: cover;" /> </a>
           <a href="#!">
@@ -26,7 +26,7 @@
         </div>
           <h4 class="card-title m-1 ">{{offer.name}}</h4>
           <p class="card-text m-2" >
-              {{offer.num_of_class}}
+              {{offer.num_of_class}} classes and you will get the offer
             </p>
 
 
