--- a/HealthClub/templates/physio-slim/br_clinics.html
+++ b/HealthClub/templates/physio-slim/br_clinics.html
@@ -1,40 +1,40 @@
 {% extends 'physio-slim/main.html' %}
-{% load static %}
-
-{% block head %}
-  <title> {{branch.name}}  Clinics </title>
-{% endblock %}
-
-{% block navbar %}
-{% include 'physio-slim/navbar.html' %}
-{% endblock %}
-
+ {% load static %}
+  {% block head %}
+<title>{{branch.name}} Clinics</title>
+{% endblock %} {% block navbar %} 
+{% include 'physio-slim/navbar.html' %} 
+{%endblock %} 
 {% block main %}
-<div class="row  p-1"> 
-    {% for clinic in clinics %}
+<div class="row p-1">
+  {% for clinic in clinics %}
 
-    <div class="col-12 col-md-6 col-lg-6 ">
-      <div class="card m-1 mt-5" style="height: 50vh;">
+  <div class="col-12 col-md-6 col-lg-6">
+    <div class="card m-1 mt-5" style="height: 70vh">
+      <div
+        class="bg-image hover-overlay ripple p-1"
+        data-mdb-ripple-color="light"
+      >
+        <img
+          src="{{MEDIA_URL}}/{{clinic.photo}}"
+          class="img-fluid mx-3"
+          style="
+            width: 90%;
 
-        <div class="bg-image hover-overlay ripple p-1" data-mdb-ripple-color="light">
-            <img src="{{MEDIA_URL}}/{{clinic.photo}}" class="img-fluid" style="width:  100%;
-                          height: 200px;
-                          background-size: cover;" /> </a>
-          <a href="#!">
-            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-          </a>
-        </div>
-          <h4 class="card-title m-1 ">{{clinic.clinic}}</h4>
-          <p class="card-text m-2" >
-              {{clinic.description}}
-            </p>
-
-
-       
+            height: 250px;
+            background-size: cover;
+          "
+        />
+        <div
+          class="mask"
+          style="background-color: rgba(251, 251, 251, 0.15)"
+        ></div>
       </div>
+      <h4 class="card-title m-1 pl-3">{{clinic.clinic}}</h4>
+      <p class="card-text m-2 pl-3">{{clinic.description}}</p>
     </div>
-    {% endfor %}
-   
+  </div>
+  {% endfor %}
 </div>
 
- {% endblock %}
+{% endblock %}
