--- a/HealthClub/templates/physio-slim/branchHomePage.html
+++ b/HealthClub/templates/physio-slim/branchHomePage.html
@@ -42,7 +42,8 @@
           </div>
         </div>
       </header> -->
-      
+      <a href="{% url 'event-details' branch.id %}">
+
        <div class="card bg-dark text-white carousel-item">
         <img src="{{MEDIA_URL}}/{{event.photo}}" class="card-img" alt="...">
         <div class="card-img-overlay m-3">
@@ -51,6 +52,8 @@
           <p class="card-text fs-4" style="color: black; font-family: 
           'Times New Roman', Times, serif;">{{event.description}}</p>
         </div>
+      </a>
+
   </div>
       {%endfor%}
     
@@ -156,32 +159,16 @@
   <h3 class="m-2 "> Our PersonalTrainers</h3>
   {% for PersonalTrainer in PersonalTrainers %}
   
-  <div class="col-12 col-md-6 col-lg-4 ">
-    <div class="card mb-4">
+  <div class="card bg-dark " style="width: 25%; ">
+    <img src="{{MEDIA_URL}}/{{PersonalTrainer.photo}}" class="card-img" alt="...">
+    <div class="card-img-overlay  mt-5">
+      <h3 class="card-title " style=" font-family: 'Times New Roman', Times, serif; color: black;
 
-      <div class="bg-image hover-overlay ripple p-1" data-mdb-ripple-color="light">
-          <img src="{{MEDIA_URL}}/{{offer.photo}}" class="img-fluid" style="width:  100%;
-                        height: 200px;
-                        background-size: cover;" /> </a>
-        <a href="#!">
-          <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">{{ offer.name }}</div>
-        </a>
-      </div>
-      <div class="card-body">
-        <h4 class="card-title m-1 ">{{class}}</h4>
-      </div>
+      "> C / {{PersonalTrainer.name}}</h3>
+      <p class="card-text  fs-4" style="font-family: 'Times New Roman', Times, serif
+      ; color: black;">{{PersonalTrainer.bio}}.</p>
     </div>
   </div>
-  <div class="col row g3">
-  <div class="card" style="width: 18rem;">
-    <img src="{{MEDIA_URL}}/{{PersonalTrainer.photo}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{offer.name}}</h5>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-</div>
-
   {% endfor %}
 
 
