--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -40,22 +40,6 @@
 					</div>
 				</div>
 				{% endfor %}
-				<!-- <div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span><img class="img-3" src="{% static 'images/exercise.svg' %}" alt=""></span>
-						<h3></h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius</p>
-						<p><a href="#" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
-					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span><img class="img-responsive" src="{% static 'images/yoga-carpet.svg' %}" alt=""></span>
-						<h3>Yoga</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius</p>
-						<p><a href="#" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
-					</div>
-				</div> -->
 			</div>
 			<p><a href="{% url 'classes' branch.id %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
 		</div>
@@ -104,76 +88,22 @@
 				</div>
 			</div>
 			<div class="row">
+				{% for offer in offers %}
+
 				<div class="pricing">
 					
-					{% for offer in offers %}
 					<div class="col-md-3 animate-box">
 						<div class="price-box">
-							<h2 class="pricing-plan">Starter</h2>
-							<div class="price"><sup class="currency">$</sup>9<small>/month</small></div>
+							<h2 class="pricing-plan">{{offer.name}}</h2>
+							<div class="price"><sup class="currency"></sup>{{offer.discount}} % <small>/month</small></div>
 							<ul class="classes">
-								<li>15 Cardio Classes</li>
-								<li class="color">10 Swimming Lesson</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Aerobics</li>
-								<li>10 Zumba Classes</li>
-								<li class="color">5 Massage</li>
-								<li>10 Body Building</li>
+								<li><b> </b></li>
+								<li>  On {{offer.num_of_class}} of our Classes </li>
 							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
+							<a href="{% url 'contact' %}" class="btn btn-select-plan btn-sm">Select Plan</a>
 						</div>
 					</div>
 
-					<div class="col-md-3 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Basic</h2>
-							<div class="price"><sup class="currency">$</sup>27<small>/month</small></div>
-							<ul class="classes">
-								<li>15 Cardio Classes</li>
-								<li class="color">10 Swimming Lesson</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Aerobics</li>
-								<li>10 Zumba Classes</li>
-								<li class="color">5 Massage</li>
-								<li>10 Body Building</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box popular">
-							<h2 class="pricing-plan pricing-plan-offer">Pro <span>Best Offer</span></h2>
-							<div class="price"><sup class="currency">$</sup>74<small>/month</small></div>
-							<ul class="classes">
-								<li>15 Cardio Classes</li>
-								<li class="color">10 Swimming Lesson</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Aerobics</li>
-								<li>10 Zumba Classes</li>
-								<li class="color">5 Massage</li>
-								<li>10 Body Building</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Unlimited</h2>
-							<div class="price"><sup class="currency">$</sup>140<small>/month</small></div>
-							<ul class="classes">
-								<li>15 Cardio Classes</li>
-								<li class="color">10 Swimming Lesson</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Aerobics</li>
-								<li>10 Zumba Classes</li>
-								<li class="color">5 Massage</li>
-								<li>10 Body Building</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
 				</div>
 				{% endfor %}
 			</div>
